[package]
name = "bevy-jam-6"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
log = { version = "*", features = ["max_level_trace", "release_max_level_warn"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"